welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:2: error: value update is not a member of Boolean
while (sortieTrouvee()=false){
       ^